<resources>
    <string name="app_name">testimonies</string>
    <string name="title_activity_testimonies">TestimoniesActivity</string>
    <string name="search_testimonies">search testimonies</string>
    <string name="no_testimonies">No testimonies found!</string>
    <string name="visit_link">Visit Link</string>
    <string name="images">Testimony Images</string>
    <string name="title_here">title here</string>
    <string name="title">Title</string>
    <string name="testimony">The Testimony</string>
    <string name="testimony_here">testimony here</string>
    <string name="resource">Resource</string>
    <string name="link_">video or resource link</string>
    <string name="testimony_images">Testimony images</string>
    <string name="create_testimony">Create Testimony</string>
    <string name="select_images">Select Images</string>
    <string name="approval_pending">Approval Pending</string>
    <string name="testimony_approved">Testimony Approved</string>
    <string name="update_testimony">Update Testimony</string>
    <string name="testimony_details">Testimony Details</string>
    <string name="current_images">Current Images</string>
    <string name="uploadImages">Upload Images</string>
</resources>
