<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UpdateTestimonyActivity">

    <LinearLayout
        style="@style/block.all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_testimony_crud" />

        <Button
            android:id="@+id/updateTestimony"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen30"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_marginBottom="@dimen/dimen10"
            android:background="@color/ios_green"
            android:gravity="center"
            android:text="@string/update_testimony"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/theImages"
            style="@style/block_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_images" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/testimonyImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/layout_testimony_images" />

        <Button
            android:id="@+id/uploadImages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen30"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_marginBottom="@dimen/dimen10"
            android:background="@color/ios_green"
            android:gravity="center"
            android:text="@string/uploadImages"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>